compiler/tests/snapshots/parser__ast_from_path@02_var_decl.bakugo.snap
---
source: tests/parser.rs
expression: BakugoParsingErrDebug(err)
input_file: tests/examples/ast_error/02_var_decl.bakugo
---
  × Parsing error
   ╭─[02_var_decl.bakugo:4:1]
 4 │         c int = 20;
 5 │         f, g, h = 40;
   ·         ──────┬─────
   ·               ╰── Error: Number of expressions (1) does not match number of identifers (3)
 6 │     );
   ╰────

