compiler/tests/snapshots/parser__ast_from_path@05_return.bakugo.snap
---
source: tests/parser.rs
expression: parsed
input_file: tests/examples/05_return.bakugo
---
SourceFile {
    top_level: [
        FnDecl(
            FnDecl {
                name: Ident {
                    value: "main",
                    span: Span {
                        str: "main",
                        start: 5,
                        end: 9,
                    },
                },
                params: [],
                result_kind: None,
                body: StatementList(
                    [
                        Return,
                    ],
                ),
                span: Span {
                    str: "func main() {\n    return;\n}",
                    start: 0,
                    end: 27,
                },
            },
        ),
    ],
}
