compiler/tests/snapshots/parser__ast_from_path@07_const_decl.bakugo.snap
---
source: tests/parser.rs
expression: BakugoParsingErrDebug(err)
input_file: tests/examples/ast_error/07_const_decl.bakugo
---
  × Parsing error
   ╭─[07_const_decl.bakugo:4:1]
 4 │         c int = 20;
 5 │         i, j, k int = 10, 20, 30, 40;
   ·         ──────────────┬─────────────
   ·                       ╰── Error: Number of expressions (4) does not match number of identifers (3)
 6 │     );
   ╰────

