compiler/tests/snapshots/parser__ast_from_path@07_type_def.bakugo.snap
---
source: tests/parser.rs
expression: parsed
input_file: tests/examples/07_type_def.bakugo
---
SourceFile {
    top_level: [
        FnDecl(
            FnDecl {
                name: Ident {
                    value: "main",
                    span: Span {
                        str: "main",
                        start: 5,
                        end: 9,
                    },
                },
                params: [],
                result_kind: None,
                body: StatementList(
                    [
                        Declaration(
                            Kind(
                                KindDecl {
                                    name: Ident {
                                        value: "a",
                                        span: Span {
                                            str: "a",
                                            start: 20,
                                            end: 21,
                                        },
                                    },
                                    kind: Simple {
                                        name: "int",
                                        span: Span {
                                            str: "int",
                                            start: 22,
                                            end: 25,
                                        },
                                    },
                                },
                            ),
                        ),
                        Declaration(
                            Kind(
                                KindDecl {
                                    name: Ident {
                                        value: "b",
                                        span: Span {
                                            str: "b",
                                            start: 37,
                                            end: 38,
                                        },
                                    },
                                    kind: Simple {
                                        name: "string",
                                        span: Span {
                                            str: "string",
                                            start: 39,
                                            end: 45,
                                        },
                                    },
                                },
                            ),
                        ),
                        Declaration(
                            Kind(
                                KindDecl {
                                    name: Ident {
                                        value: "c",
                                        span: Span {
                                            str: "c",
                                            start: 49,
                                            end: 50,
                                        },
                                    },
                                    kind: Simple {
                                        name: "float",
                                        span: Span {
                                            str: "float",
                                            start: 51,
                                            end: 56,
                                        },
                                    },
                                },
                            ),
                        ),
                    ],
                ),
                span: Span {
                    str: "func main() {\n\ttype a int;\n\ttype (\n\t\tb string;\n\t\tc float;\n\t);\n}",
                    start: 0,
                    end: 63,
                },
            },
        ),
    ],
}
