compiler/tests/snapshots/parser__ast_from_path@10_tuple_expr.bakugo.snap
---
source: tests/parser.rs
expression: parsed
input_file: tests/examples/10_tuple_expr.bakugo
---
SourceFile {
    top_level: [
        FnDecl(
            FnDecl {
                name: Ident {
                    value: "main",
                    span: Span {
                        str: "main",
                        start: 5,
                        end: 9,
                    },
                },
                params: [],
                result_kind: Some(
                    Tuple {
                        kinds: [
                            Simple {
                                name: "int",
                                span: Span {
                                    str: "int",
                                    start: 13,
                                    end: 16,
                                },
                            },
                            Simple {
                                name: "int",
                                span: Span {
                                    str: "int",
                                    start: 18,
                                    end: 21,
                                },
                            },
                        ],
                        span: Span {
                            str: "int, int",
                            start: 13,
                            end: 21,
                        },
                    },
                ),
                body: StatementList(
                    [
                        Declaration(
                            Var(
                                VarConstDecl {
                                    name: Ident {
                                        value: "a",
                                        span: Span {
                                            str: "a",
                                            start: 34,
                                            end: 35,
                                        },
                                    },
                                    kind: None,
                                    expr: TupleExpr(
                                        [
                                            Integer {
                                                value: 34,
                                                span: Span {
                                                    str: "34",
                                                    start: 39,
                                                    end: 41,
                                                },
                                            },
                                            TupleExpr(
                                                [
                                                    Integer {
                                                        value: 4,
                                                        span: Span {
                                                            str: "4",
                                                            start: 44,
                                                            end: 45,
                                                        },
                                                    },
                                                    Integer {
                                                        value: 45,
                                                        span: Span {
                                                            str: "45",
                                                            start: 47,
                                                            end: 49,
                                                        },
                                                    },
                                                ],
                                            ),
                                        ],
                                    ),
                                },
                            ),
                        ),
                        Declaration(
                            Var(
                                VarConstDecl {
                                    name: Ident {
                                        value: "a",
                                        span: Span {
                                            str: "a",
                                            start: 55,
                                            end: 56,
                                        },
                                    },
                                    kind: None,
                                    expr: TupleExpr(
                                        [
                                            Integer {
                                                value: 34,
                                                span: Span {
                                                    str: "34",
                                                    start: 60,
                                                    end: 62,
                                                },
                                            },
                                            TupleExpr(
                                                [
                                                    Integer {
                                                        value: 4,
                                                        span: Span {
                                                            str: "4",
                                                            start: 65,
                                                            end: 66,
                                                        },
                                                    },
                                                    Integer {
                                                        value: 45,
                                                        span: Span {
                                                            str: "45",
                                                            start: 68,
                                                            end: 70,
                                                        },
                                                    },
                                                ],
                                            ),
                                        ],
                                    ),
                                },
                            ),
                        ),
                        Declaration(
                            Var(
                                VarConstDecl {
                                    name: Ident {
                                        value: "b",
                                        span: Span {
                                            str: "b",
                                            start: 77,
                                            end: 78,
                                        },
                                    },
                                    kind: None,
                                    expr: TupleExpr(
                                        [
                                            Integer {
                                                value: 34,
                                                span: Span {
                                                    str: "34",
                                                    start: 82,
                                                    end: 84,
                                                },
                                            },
                                        ],
                                    ),
                                },
                            ),
                        ),
                    ],
                ),
                span: Span {
                    str: "func main() (int, int) {\n\tvar (\n\t\ta = (34, (4, 45));\n\t\ta = (34, (4, 45),);\n\t\tb = (34,);\n\t);\n}",
                    start: 0,
                    end: 93,
                },
            },
        ),
    ],
}
