compiler/tests/snapshots/parser__ast_from_path@12_assignments.bakugo.snap
---
source: tests/parser.rs
expression: parsed
input_file: tests/examples/12_assignments.bakugo
---
SourceFile {
    top_level: [
        FnDecl(
            FnDecl {
                name: Ident {
                    value: "main",
                    span: Span {
                        str: "main",
                        start: 5,
                        end: 9,
                    },
                },
                params: [],
                result_kind: None,
                body: StatementList(
                    [
                        Assignment {
                            left: Identifier {
                                value: "a",
                                span: Span {
                                    str: "a",
                                    start: 15,
                                    end: 16,
                                },
                            },
                            right: Integer {
                                value: 45,
                                span: Span {
                                    str: "45",
                                    start: 19,
                                    end: 21,
                                },
                            },
                        },
                        Assignment {
                            left: Identifier {
                                value: "a",
                                span: Span {
                                    str: "a",
                                    start: 24,
                                    end: 25,
                                },
                            },
                            right: Integer {
                                value: 45,
                                span: Span {
                                    str: "45",
                                    start: 34,
                                    end: 36,
                                },
                            },
                        },
                        Assignment {
                            left: Identifier {
                                value: "b",
                                span: Span {
                                    str: "b",
                                    start: 27,
                                    end: 28,
                                },
                            },
                            right: Integer {
                                value: 2,
                                span: Span {
                                    str: "2",
                                    start: 38,
                                    end: 39,
                                },
                            },
                        },
                        Assignment {
                            left: Identifier {
                                value: "c",
                                span: Span {
                                    str: "c",
                                    start: 30,
                                    end: 31,
                                },
                            },
                            right: Integer {
                                value: 3,
                                span: Span {
                                    str: "3",
                                    start: 41,
                                    end: 42,
                                },
                            },
                        },
                    ],
                ),
                span: Span {
                    str: "func main() {\n\ta = 45;\n\ta, b, c = 45, 2, 3;\n}",
                    start: 0,
                    end: 45,
                },
            },
        ),
    ],
}
